...

    Scaffold(
        snackbarHost = { SnackbarHost(snackbarHostState) },
        floatingActionButton = {
            ExtendedFloatingActionButton(
                onClick = onAddYarnClick,
                modifier = Modifier.testTag("e2e-new-yarn"),
                icon = { Icon(Icons.Filled.Add, contentDescription = null) },
                text = { Text(stringResource(R.string.yarns_list_new_yarn_fab)) },
                expanded = !listState.canScrollBackward,
            )
        },
    ) { innerPadding ->
...
                }
                Spacer(Modifier.height(8.dp))

                if (yarns.isEmpty()) {
                    LazyColumn(
                        state = listState,
                        modifier = Modifier.fillMaxSize().testTag("e2e-yarns-list"),
                    ) {
                        item {
                            EmptyState(
                                icon = MdiIcons.Sheep,
                                title = stringResource(R.string.yarns_list_empty_title),
                                subtitle = stringResource(R.string.projects_list_empty_subtitle),
...
